{
    "name": "MyInputs",
    "maps": [
        {
            "name": "PC",
            "id": "e0ad2ba3-5eaf-4c37-b662-b4426cb10a3e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "54dba2bb-5996-427a-a575-fc552411b17e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveButton",
                    "type": "Button",
                    "id": "7725f597-03af-420f-8ebd-0dff209136b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetButton",
                    "type": "Button",
                    "id": "b0050615-29a0-459b-9c8e-d21efb0e6c88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed30617e-9761-4330-ba87-b3ccd937a720",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e7befea-d302-4695-b261-1b919926914a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60ac2bf6-0a62-45ce-86b4-110c446521e3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TargetButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}